@@ -4,6 +4,9 @@ Fix error with ᎢᏍᎩ- "You one + you all" should read "You one + them and me
 Reduced ᎢᏍᎩ- challenges from 3 to 2 cards.
 Fix error with ᏍᎩᏂ- "You one + you two" should read "You one + him and me"
 Reduced ᏍᎩᏂ- challenges from 3 to 2 cards.
+Added "Level" number calculation to stats.
+Added "Level" name to stats.
+Addded description of "Level" and "Percentages" to instructions under "Your stats"
 
 1.60
 
